# rust-sdk

./: .gitignore  Cargo.toml  README.md
abi/: darkpool-abi.json
examples/: external_match.rs  quote_validation.rs
examples/external_match/: base_sepolia_match.rs  connector_malleable_match.rs  direct_malleable_match.rs  exact_base_output.rs  exact_quote_output.rs  external_match.rs  gas_sponsorship.rs  in_kind_gas_sponsorship.rs  malleable_match.rs  modify_order_after_quote.rs  native_eth_gas_sponsorship.rs  non_sender_receiver.rs  quote_validation.rs  shared_bundle.rs  supported_tokens.rs
examples/order_book/: all_pairs_depth.rs  exchange_metadata.rs  order_book_depth.rs  supported_tokens.rs  token_prices.rs
examples/wallet/: README.md  cancel_order.rs  create_wallet.rs  deposit.rs  generate_wallet.rs  get_wallet.rs  place_order.rs  place_order_await.rs  withdraw.rs
src/: auth.rs  example_utils.rs  http.rs  lib.rs  types.rs  util.rs
src/darkpool_client/: auth.rs  mod.rs  wallet_ops.rs
src/external_match_client/: api_types.rs  client.rs  error.rs  mod.rs  options.rs  v1_client.rs  v1_conversions.rs
src/external_match_client/api_types/: exchange_metadata.rs  fixed_point.rs  malleable_match.rs  markets.rs  mod.rs  order_book.rs  order_types.rs  request_response.rs  serde_helpers.rs  token.rs  v1_types.rs
src/renegade_wallet_client/: client.rs  config.rs  conversions.rs  mod.rs  utils.rs
src/renegade_wallet_client/actions/: admin_assign_order_to_pool.rs  admin_create_matching_pool.rs  admin_get_account_orders.rs  admin_get_open_orders.rs  admin_get_order.rs  admin_get_orders.rs  admin_is_task_queue_paused.rs  admin_place_order_in_pool.rs  approvals.rs  cancel_order.rs  create_account.rs  create_wallet.rs  deposit.rs  get_account.rs  get_account_seeds.rs  get_balance_by_mint.rs  get_balances.rs  get_order.rs  get_orders.rs  get_task.rs  get_task_history.rs  get_task_queue.rs  get_tasks.rs  get_wallet.rs  lookup_wallet.rs  mod.rs  place_order.rs  refresh_wallet.rs  sync_account.rs  update_order.rs  withdraw.rs
src/renegade_wallet_client/renegade_api_types/: account.rs  admin.rs  balances.rs  mod.rs  orders.rs  request_response.rs  serde_helpers.rs  tasks.rs  websocket.rs
src/renegade_wallet_client/websocket/: client.rs  mod.rs  subscriptions.rs  task_waiter.rs
src/v2/: constants.rs  mod.rs
src/v2/external_match_client/: error.rs  mod.rs
src/v2/external_match_client/api/: constants.rs  mod.rs
src/v2/external_match_client/api/types/: mod.rs  order_types.rs  request_response.rs  serde_helpers.rs
