[package]
name = "renegade-sdk"
version = "0.1.16"
edition = "2021"
description = "A Rust SDK for the Renegade protocol"
homepage = "https://renegade.fi/"
repository = "https://github.com/renegade-fi/rust-sdk"
readme = "README.md"
keywords = ["renegade", "darkpool", "zk", "sdk"]
license = "MIT"

[[example]]
name = "external_match"
path = "examples/external_match/external_match.rs"
required-features = ["examples"]

[[example]]
name = "base_sepolia_match"
path = "examples/external_match/base_sepolia_match.rs"
required-features = ["examples"]

[[example]]
name = "quote_validation"
path = "examples/external_match/quote_validation.rs"
required-features = ["examples"]

[[example]]
name = "non_sender_receiver"
path = "examples/external_match/non_sender_receiver.rs"
required-features = ["examples"]

[[example]]
name = "modify_order_after_quote"
path = "examples/external_match/modify_order_after_quote.rs"
required-features = ["examples"]

[[example]]
name = "native_eth_gas_sponsorship"
path = "examples/external_match/native_eth_gas_sponsorship.rs"
required-features = ["examples"]

[[example]]
name = "in_kind_gas_sponsorship"
path = "examples/external_match/in_kind_gas_sponsorship.rs"
required-features = ["examples"]

[[example]]
name = "supported_tokens"
path = "examples/order_book/supported_tokens.rs"
required-features = ["examples"]

[[example]]
name = "token_prices"
path = "examples/order_book/token_prices.rs"
required-features = ["examples"]

[[example]]
name = "order_book_depth"
path = "examples/order_book/order_book_depth.rs"
required-features = ["examples"]

[[example]]
name = "all_pairs_depth"
path = "examples/order_book/all_pairs_depth.rs"
required-features = ["examples"]

[[example]]
name = "shared_bundle"
path = "examples/external_match/shared_bundle.rs"
required-features = ["examples"]

[[example]]
name = "malleable_match"
path = "examples/external_match/malleable_match.rs"
required-features = ["examples"]

[features]
default = ["external-match-client", "darkpool-client"]
external-match-client = []
darkpool-client = []
examples = []

[dependencies]
# === Auth === #
hmac = "0.12"
sha2 = { version = "0.10", features = ["asm"] }

# === Http === #
reqwest = { version = ">=0.12, <1.0", features = ["json"] }
serde = { version = "^1.0.197" }
serde_json = "1.0.64"

# === Ethereum === #
alloy = { version = ">=0.12, <2.0", features = ["essentials"] }
alloy-rpc-types-eth = { version = ">=0.12, <2.0" }

# === Misc === #
base64 = "0.22"
bigdecimal = "0.4.0"
eyre = "0.6.10"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-traits = "0.2.19"
num-integer = "0.1"
thiserror = "1.0.31"
url = "2.5.0"

# === Example Dependencies === #
[dev-dependencies]
rand = "0.8"
tokio = { version = "1.30.0", features = ["full"] }
