[package]
name = "renegade-sdk"
version = "0.1.16"
edition = "2021"
description = "A Rust SDK for the Renegade protocol"
homepage = "https://renegade.fi/"
repository = "https://github.com/renegade-fi/rust-sdk"
readme = "README.md"
keywords = ["renegade", "darkpool", "zk", "sdk"]
license = "MIT"

[[example]]

# === External Match Examples === #

name = "external_match"
path = "examples/external_match/external_match.rs"
required-features = ["examples"]

[[example]]
name = "base_sepolia_match"
path = "examples/external_match/base_sepolia_match.rs"
required-features = ["examples"]

[[example]]
name = "quote_validation"
path = "examples/external_match/quote_validation.rs"
required-features = ["examples"]

[[example]]
name = "non_sender_receiver"
path = "examples/external_match/non_sender_receiver.rs"
required-features = ["examples"]

[[example]]
name = "modify_order_after_quote"
path = "examples/external_match/modify_order_after_quote.rs"
required-features = ["examples"]

[[example]]
name = "native_eth_gas_sponsorship"
path = "examples/external_match/native_eth_gas_sponsorship.rs"
required-features = ["examples"]

[[example]]
name = "in_kind_gas_sponsorship"
path = "examples/external_match/in_kind_gas_sponsorship.rs"
required-features = ["examples"]

[[example]]
name = "supported_tokens"
path = "examples/order_book/supported_tokens.rs"
required-features = ["examples"]

[[example]]
name = "token_prices"
path = "examples/order_book/token_prices.rs"
required-features = ["examples"]

[[example]]
name = "order_book_depth"
path = "examples/order_book/order_book_depth.rs"
required-features = ["examples"]

[[example]]
name = "all_pairs_depth"
path = "examples/order_book/all_pairs_depth.rs"
required-features = ["examples"]

[[example]]
name = "shared_bundle"
path = "examples/external_match/shared_bundle.rs"
required-features = ["examples"]

[[example]]
name = "malleable_match"
path = "examples/external_match/malleable_match.rs"
required-features = ["examples"]

# === Wallet Examples === #

[[example]]
name = "generate_wallet"
path = "examples/wallet/generate_wallet.rs"
required-features = ["examples", "darkpool-client"]

[[example]]
name = "create_wallet"
path = "examples/wallet/create_wallet.rs"
required-features = ["examples", "darkpool-client"]

[[example]]
name = "get_wallet"
path = "examples/wallet/get_wallet.rs"
required-features = ["examples", "darkpool-client"]

[[example]]
name = "place_order"
path = "examples/wallet/place_order.rs"
required-features = ["examples", "darkpool-client"]

[[example]]
name = "cancel_order"
path = "examples/wallet/cancel_order.rs"
required-features = ["examples", "darkpool-client"]

[[example]]
name = "deposit"
path = "examples/wallet/deposit.rs"
required-features = ["examples", "darkpool-client"]

[features]
default = ["external-match-client", "darkpool-client"]
external-match-client = []
darkpool-client = [
    "dep:darkpool-client",
    "dep:renegade-circuit-types",
    "dep:renegade-api",
    "dep:renegade-common",
    "dep:renegade-constants",
    "dep:renegade-crypto",
    "dep:renegade-utils",
]
examples = []

[dependencies]
# === Auth === #
hmac = "0.12"
sha2 = { version = "0.10", features = ["asm"] }

# === Http === #
reqwest = { version = ">=0.12, <1.0", features = ["json"] }
serde = { version = "^1.0.197" }
serde_json = "1.0.64"

# === Ethereum === #
alloy = { version = ">=0.12, <2.0", features = ["essentials"] }
alloy-rpc-types-eth = { version = ">=0.12, <2.0" }

# === Renegade Dependencies === #
darkpool-client = { git = "https://github.com/renegade-fi/renegade.git", features = [
    "all-chains",
    "transfer-auth",
], optional = true }
renegade-circuit-types = { package = "circuit-types", git = "https://github.com/renegade-fi/renegade.git", optional = true }
renegade-api = { package = "external-api", git = "https://github.com/renegade-fi/renegade.git", features = [
    "auth",
], optional = true }
renegade-common = { package = "common", git = "https://github.com/renegade-fi/renegade.git", optional = true }
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git", optional = true }
renegade-crypto = { package = "renegade-crypto", git = "https://github.com/renegade-fi/renegade.git", optional = true }
renegade-utils = { package = "util", git = "https://github.com/renegade-fi/renegade.git", optional = true }

# === Misc === #
base64 = "0.22"
bigdecimal = "0.4.0"
eyre = "0.6.10"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-traits = "0.2.19"
num-integer = "0.1"
thiserror = "1.0.31"
url = "2.5.0"
uuid = "1.13.0"

# === Example Dependencies === #
[dev-dependencies]
rand = "0.8"
tokio = { version = "1.30.0", features = ["full"] }
