[package]
name = "renegade-sdk"
version = "2.0.0"
edition = "2024"
description = "A Rust SDK for the Renegade protocol"
homepage = "https://renegade.fi/"
repository = "https://github.com/renegade-fi/rust-sdk"
readme = "README.md"
keywords = ["renegade", "darkpool", "zk", "sdk"]
license = "MIT"


# === External Match Examples === #

[[example]]
name = "external_match"
path = "examples/external_match/external_match.rs"
required-features = ["examples"]

[[example]]
name = "base_sepolia_match"
path = "examples/external_match/base_sepolia_match.rs"
required-features = ["examples"]

[[example]]
name = "quote_validation"
path = "examples/external_match/quote_validation.rs"
required-features = ["examples"]

[[example]]
name = "non_sender_receiver"
path = "examples/external_match/non_sender_receiver.rs"
required-features = ["examples"]

[[example]]
name = "modify_order_after_quote"
path = "examples/external_match/modify_order_after_quote.rs"
required-features = ["examples"]

[[example]]
name = "native_eth_gas_sponsorship"
path = "examples/external_match/native_eth_gas_sponsorship.rs"
required-features = ["examples"]

[[example]]
name = "in_kind_gas_sponsorship"
path = "examples/external_match/in_kind_gas_sponsorship.rs"
required-features = ["examples"]

[[example]]
name = "exact_quote_output"
path = "examples/external_match/exact_quote_output.rs"
required-features = ["examples"]

[[example]]
name = "supported_tokens"
path = "examples/order_book/supported_tokens.rs"
required-features = ["examples"]

[[example]]
name = "token_prices"
path = "examples/order_book/token_prices.rs"
required-features = ["examples"]

[[example]]
name = "order_book_depth"
path = "examples/order_book/order_book_depth.rs"
required-features = ["examples"]

[[example]]
name = "all_pairs_depth"
path = "examples/order_book/all_pairs_depth.rs"
required-features = ["examples"]

[[example]]
name = "exchange_metadata"
path = "examples/order_book/exchange_metadata.rs"
required-features = ["examples"]

[[example]]
name = "shared_bundle"
path = "examples/external_match/shared_bundle.rs"
required-features = ["examples"]

[[example]]
name = "malleable_match"
path = "examples/external_match/malleable_match.rs"
required-features = ["examples"]

[[example]]
name = "connector_malleable_match"
path = "examples/external_match/connector_malleable_match.rs"
required-features = ["examples"]

[[example]]
name = "direct_malleable_match"
path = "examples/external_match/direct_malleable_match.rs"
required-features = ["examples"]

# === Wallet Examples === #

[[example]]
name = "generate_wallet"
path = "examples/wallet/generate_wallet.rs"
required-features = ["examples", "darkpool-client"]

[[example]]
name = "create_wallet"
path = "examples/wallet/create_wallet.rs"
required-features = ["examples", "darkpool-client"]

[[example]]
name = "get_wallet"
path = "examples/wallet/get_wallet.rs"
required-features = ["examples", "darkpool-client"]

[[example]]
name = "place_order"
path = "examples/wallet/place_order.rs"
required-features = ["examples", "darkpool-client"]

[[example]]
name = "place_order_await"
path = "examples/wallet/place_order_await.rs"
required-features = ["examples", "darkpool-client"]

[[example]]
name = "cancel_order"
path = "examples/wallet/cancel_order.rs"
required-features = ["examples", "darkpool-client"]

[[example]]
name = "deposit"
path = "examples/wallet/deposit.rs"
required-features = ["examples", "darkpool-client"]

[[example]]
name = "withdraw"
path = "examples/wallet/withdraw.rs"
required-features = ["examples", "darkpool-client"]

[features]
default = ["external-match-client", "darkpool-client"]
external-match-client = []
darkpool-client = [
    "dep:futures-util",
    "dep:renegade-circuit-types",
    "dep:renegade-darkpool-types",
    "dep:renegade-constants",
    "dep:renegade-crypto",
    "dep:renegade-solidity-abi",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tokio-tungstenite",
    "dep:tracing",
]
examples = []
internal = []

[dependencies]
# === Auth === #
hmac = "0.12"
sha2 = { version = "0.10", features = ["asm"] }

# === Http + Websocket === #
futures-util = { version = "0.3", optional = true }
reqwest = { version = ">=0.12, <1.0", features = ["json"] }
serde = { version = "^1.0.197" }
serde_json = "1.0.64"
serde_urlencoded = "0.7.1"
tokio = { version = "1.30.0", features = ["full"], optional = true }
tokio-stream = { version = "0.1.17", features = ["sync"], optional = true }
tokio-tungstenite = { version = "0.20.0", features = [
    "native-tls",
], optional = true }

# === Ethereum === #
alloy = { version = ">=0.12, <2.0", features = ["essentials"] }
alloy-rpc-types-eth = { version = ">=0.12, <2.0" }
k256 = { version = "0.13", features = ["ecdsa"] }

# === Renegade Dependencies === #
renegade-types-core = { package = "types-core", git = "https://github.com/renegade-fi/renegade.git", branch = "joey/relayer-v2", features = [
    "hmac",
] }
renegade-external-api = { package = "external-api", git = "https://github.com/renegade-fi/renegade.git", branch = "joey/relayer-v2", default-features = false, features = [
    "auth", "full-api"
] }
renegade-circuit-types = { package = "circuit-types", git = "https://github.com/renegade-fi/renegade.git", branch = "joey/relayer-v2", optional = true, features = [
    "proof-system-types",
] }
renegade-darkpool-types = { package = "darkpool-types", git = "https://github.com/renegade-fi/renegade.git", branch = "joey/relayer-v2", optional = true, features = [
    "proof-system-types",
] }
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git", branch = "joey/relayer-v2", optional = true }
renegade-crypto = { package = "crypto", git = "https://github.com/renegade-fi/renegade.git", branch = "joey/relayer-v2", optional = true }
renegade-solidity-abi = { package = "abi", git = "https://github.com/renegade-fi/renegade-contracts.git", features = [
    "v2",
    "v2-relayer-types",
    "v2-auth-helpers",
    "transfer-auth",
], optional = true }

# === Cryptography === #
ark-ff = "0.4"

# === Misc === #
base64 = "0.22"
bigdecimal = "0.4.0"
eyre = "0.6.10"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-traits = "0.2.19"
num-integer = "0.1"
thiserror = "1.0.31"
tracing = { version = "0.1.39", optional = true }
url = "2.5.0"
uuid = { version = "1.13.0", features = ["serde", "v4"] }

# === Example Dependencies === #
[dev-dependencies]
rand = "0.8"
tokio = { version = "1.30.0", features = ["full"] }
